--- a/app/views/base/apply/_BASE.html
+++ b/app/views/base/apply/_BASE.html
@@ -175,7 +175,13 @@ Form content here
       {
         href: "/manage-prototype/clear-data",
         text: "Clear data"
-      }
+      },
+      {
+        href: "https://design-system.service.gov.uk/",
+        text: "GOV.UK Design System (opens in new tab)",
+        attributes: {
+          "target" : "_blank"
+        }
     ]
   }
 }) }}
