--- a/app/views/index.html
+++ b/app/views/index.html
@@ -145,6 +145,13 @@ All screens
       {
         href: "/manage-prototype/clear-data",
         text: "Clear data"
+      },
+      {
+        href: "https://design-system.service.gov.uk/",
+        text: "GOV.UK Design System (opens in new tab)",
+        attributes: {
+          "target" : "_blank"
+        }
       }
     ]
   }
