fixed footer bugs

--- a/app/views/base/account/_BASE.html
+++ b/app/views/base/account/_BASE.html
@@ -58,6 +58,7 @@ Account content
 
 {% endblock %}
 
+{% block footer %}
 
 {{ govukFooter({
   meta: {
@@ -80,6 +81,9 @@ Account content
         attributes: {
           "target" : "_blank"
         }
+      }
     ]
   }
 }) }}
+
+{% endblock %}
