--- a/app/views/base/account/index.html
+++ b/app/views/base/account/index.html
@@ -11,8 +11,8 @@
 
 
   <p class="govuk-notification-banner__heading">
-    You have tasks to complete.
-    <a class="govuk-notification-banner__link" href="tasks">Go to incomplete tasks</a>.
+    You need to upload examples of your writing.
+    <a class="govuk-notification-banner__link" href="tasks">Go to your application</a> to upload them.
   </p>
 {% endset %}
 
@@ -24,15 +24,7 @@
 
 
   <p class="govuk-body">
-
-
-
-    Panel
-    Important – if you don’t upload your evidence your application won’t be processed.
-
-    Upload document – file upload.
-
-    Change the type of licence you have.
+You have <a class="govuk-link" href="#">1 application</a>.
 
 
   </p>
