--- a/app/views/index.html
+++ b/app/views/index.html
@@ -118,6 +118,8 @@ All screens
     <li>Timeout warning not found - this has not been included for the purposes of a prototype</li>
     <li>ARIA link to input missing on character input field - this is from the GOV.UK Design System pattern</li>
     <li>Page title does not match service name on GOV.UK start page - this is normally on the GOV.UK website and not a transaction</li>
+    <li>Page title does not match service name on account home - this is because the page is a home of an account and the plugin is not registering the extra section</li>
+
   </ol>
 
   <h2 class="govuk-heading-l">
