--- a/app/views/base/account/_BASE.html
+++ b/app/views/base/account/_BASE.html
@@ -9,7 +9,7 @@
 
 {% block header %}
 {{ govukHeader({
-  homepageUrl: "/" + folder + "/index",
+  homepageUrl: "/",
   serviceName:  serviceName,
   serviceUrl: "/" + folder + "/" + subfolder + "/index",
   navigation: [
