added link to source code

--- a/app/views/base/account/_BASE.html
+++ b/app/views/base/account/_BASE.html
@@ -76,8 +76,8 @@ Account content
         text: "Clear data"
       },
       {
-        href: "https://design-system.service.gov.uk/",
-        text: "GOV.UK Design System (opens in new tab)",
+        href: "https://github.com/vickytnz/demo-kit/",
+        text: "Source code on Github (opens in new tab)",
         attributes: {
           "target" : "_blank"
         }
