--- a/app/views/index.html
+++ b/app/views/index.html
@@ -33,8 +33,8 @@ All screens
         </h3>
 
     {% set guidance = [
-    {title: "Start page", description: "Guidance, start page, important text", link: "start" },
-    {title: "Guidance", description: "Accordion", link: "accordion" }
+    {title: "Start page", description: "Guidance, start page, important text, links (same tab and new tab)", link: "start" },
+    {title: "Guidance", description: "Accordion, links (same tab and new tab)", link: "accordion" }
 
       ]%}
 
@@ -68,15 +68,15 @@ All screens
     </h3>
 
     {% set apply = [
-    {title: "Q1", description: "Input, date, back link, cookie banner, error message", link: "apply/1" },
-    {title: "Q1a", description: "Autocomplete, back link, cookie banner, error message", link: "apply/1a" },
-    {title: "Q2", description: "Conditional reveal, complex question, checkboxes, back link, cookie banner, error message", link: "apply/2" },
-    {title: "Q3", description: "Textarea, back link, cookie banner, error message", link: "apply/3" },
-    {title: "Q4", description: "Radio, back link, cookie banner, error message", link: "apply/4" },
-    {title: "Q5", description: "Upload link, back link, cookie banner, error message", link: "apply/5" },
-    {title: "Check your answers", description: "Summary list, cookie banner", link: "apply/check-your-answers" },
-    {title: "Confirmation", description: "Panel, button, cookie banner", link: "apply/confirmation" },
-    {title: "Cookies", description: "Cookie page, success banner", link: "apply/cookies" }
+    {title: "Q1", description: "Input, date, back link, cookie banner, error message, links (same tab and new tab)", link: "apply/1" },
+    {title: "Q1a", description: "Autocomplete, back link, cookie banner, error message, links (same tab and new tab)", link: "apply/1a" },
+    {title: "Q2", description: "Conditional reveal, complex question, checkboxes, back link, cookie banner, error message, links (same tab and new tab)", link: "apply/2" },
+    {title: "Q3", description: "Textarea, back link, cookie banner, error message, links (same tab and new tab)", link: "apply/3" },
+    {title: "Q4", description: "Radio, back link, cookie banner, error message, links (same tab and new tab)", link: "apply/4" },
+    {title: "Q5", description: "Upload link, back link, cookie banner, error message, links (same tab and new tab)", link: "apply/5" },
+    {title: "Check your answers", description: "Summary list, cookie banner, links (same tab and new tab)", link: "apply/check-your-answers" },
+    {title: "Confirmation", description: "Panel, button, cookie banner, links (same tab and new tab)", link: "apply/confirmation" },
+    {title: "Cookies", description: "Cookie page, success banner, links (same tab and new tab)", link: "apply/cookies" }
 
       ]%}
 
@@ -94,7 +94,7 @@ All screens
 
 
     {% set account = [
-    {title: "Account home", description: "Menu with links", link: "account/index" }
+    {title: "Account home", description: "Menu with links, notification banner, links (same tab and new tab)", link: "account/index" }
 
       ]%}
 
@@ -149,8 +149,8 @@ All screens
         text: "Clear data"
       },
       {
-        href: "https://design-system.service.gov.uk/",
-        text: "GOV.UK Design System (opens in new tab)",
+        href: "https://github.com/vickytnz/demo-kit/",
+        text: "Source code on Github (opens in new tab)",
         attributes: {
           "target" : "_blank"
         }
