--- a/app/views/base/start.html
+++ b/app/views/base/start.html
@@ -141,7 +141,10 @@ You can <a class="govuk-link" href="account/index">check your account.</a>You wi
 {{ govukFooter({
   meta: {
     items: [
-
+    {
+      href: "/",
+      text: "Prototype home"
+    },  
       {
         href: "/manage-prototype",
         text: "Manage prototype"
