--- a/app/views/index.html
+++ b/app/views/index.html
@@ -140,6 +140,10 @@ All screens
 {{ govukFooter({
   meta: {
     items: [
+    {
+      href: "/",
+      text: "Prototype home"
+    },  
       {
         href: "/manage-prototype",
         text: "Manage prototype"
