changed dash on header

--- a/app/views/base/account/_BASE.html
+++ b/app/views/base/account/_BASE.html
@@ -4,7 +4,7 @@
 
 
 {% block pageTitle %}
-  {% if data['errors'] %}Error: {% endif %}{{pageTitle}} – {{ serviceName }} - GOV.UK
+  {% if data['errors'] %}Error: {% endif %}{{pageTitle}} – {{ serviceName }} – GOV.UK
 {% endblock %}
 
 {% block header %}
@@ -66,7 +66,7 @@ Account content
     {
       href: "/",
       text: "Prototype home"
-    },  
+    },
       {
         href: "/base/apply/cookies",
         text: "Cookies"
