--- a/app/views/index.html
+++ b/app/views/index.html
@@ -68,15 +68,15 @@ All screens
     </h3>
 
     {% set apply = [
-    {title: "Q1", description: "Input, date, back link, cookie banner, error message, links (same tab and new tab)", link: "apply/1" },
-    {title: "Q1a", description: "Autocomplete, back link, cookie banner, error message, links (same tab and new tab)", link: "apply/1a" },
-    {title: "Q2", description: "Conditional reveal, complex question, checkboxes, back link, cookie banner, error message, links (same tab and new tab)", link: "apply/2" },
-    {title: "Q3", description: "Textarea, back link, cookie banner, error message, links (same tab and new tab)", link: "apply/3" },
-    {title: "Q4", description: "Radio, back link, cookie banner, error message, links (same tab and new tab)", link: "apply/4" },
-    {title: "Q5", description: "Upload link, back link, cookie banner, error message, links (same tab and new tab)", link: "apply/5" },
-    {title: "Check your answers", description: "Summary list, cookie banner, links (same tab and new tab)", link: "apply/check-your-answers" },
-    {title: "Confirmation", description: "Panel, button, cookie banner, links (same tab and new tab)", link: "apply/confirmation" },
-    {title: "Cookies", description: "Cookie page, success banner, links (same tab and new tab)", link: "apply/cookies" }
+    {title: "Q1", description: "GOV.UK header, phase banner, service navigation, input, date, back link, cookie banner, error message, links (same tab and new tab)", link: "apply/1" },
+    {title: "Q1a", description: "GOV.UK header, phase banner, service navigation, autocomplete, back link, cookie banner, error message, links (same tab and new tab)", link: "apply/1a" },
+    {title: "Q2", description: "GOV.UK header, phase banner, service navigation, conditional reveal, complex question, checkboxes, back link, cookie banner, error message, links (same tab and new tab)", link: "apply/2" },
+    {title: "Q3", description: "GOV.UK header, phase banner, service navigation, textarea, back link, cookie banner, error message, links (same tab and new tab)", link: "apply/3" },
+    {title: "Q4", description: "GOV.UK header, phase banner, service navigation, radio, back link, cookie banner, error message, links (same tab and new tab)", link: "apply/4" },
+    {title: "Q5", description: "GOV.UK header, phase banner, service navigation, upload link, back link, cookie banner, error message, links (same tab and new tab)", link: "apply/5" },
+    {title: "Check your answers", description: "GOV.UK header, phase banner, service navigation,summary list, cookie banner, links (same tab and new tab)", link: "apply/check-your-answers" },
+    {title: "Confirmation", description: "GOV.UK header, phase banner, service navigation, panel, button, cookie banner, links (same tab and new tab)", link: "apply/confirmation" },
+    {title: "Cookies", description: " GOV.UK header, phase banner, service navigation,cookie page, success banner, links (same tab and new tab)", link: "apply/cookies" }
 
       ]%}
 
@@ -94,7 +94,7 @@ All screens
 
 
     {% set account = [
-    {title: "Account home", description: "Menu with links, notification banner, links (same tab and new tab)", link: "account/index" }
+    {title: "Account home", description: "GOV.UK header, phase banner, service navigation with links, notification banner, links (same tab and new tab)", link: "account/index" }
 
       ]%}
 
@@ -143,7 +143,7 @@ All screens
     {
       href: "/",
       text: "Prototype home"
-    },  
+    },
       {
         href: "/manage-prototype",
         text: "Manage prototype"
