--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -4,3 +4,19 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
 #}
 
 {% extends "govuk-prototype-kit/layouts/govuk-branded.njk" %}
+
+
+
+{% block header %}
+{{ govukHeader({
+  classes: "govuk-header--full-width-border"
+
+}) }}
+
+
+{{ govukServiceNavigation({
+  serviceName:  serviceName,
+  serviceUrl: "/"
+}) }}
+
+{% endblock %}
