--- a/app/views/base/apply/2.html
+++ b/app/views/base/apply/2.html
@@ -24,7 +24,7 @@
 
 {{ govukDetails({
   summaryText: "Understanding types of help",
-  text: "You can get a range of help. Apply for as many as you think you need "
+  text: "Tuition fee support can help you pay for study costs to your course provider. Living costs support can help you pay for books and materials. If you have a disability or health condition you could get additional support such as equipment or non-medical help."
 }) }}
 
 
