--- a/app/views/base/apply/check-your-answers.html
+++ b/app/views/base/apply/check-your-answers.html
@@ -116,7 +116,7 @@
     },
     {
       key: {
-        text: "Uploads"
+        text: "Proof of identity"
       },
       value: {
         html: data["fileUpload1"] or "Not provided"
@@ -126,7 +126,7 @@
           {
             href: "5",
             text: "Change",
-            visuallyHiddenText: "upload"
+            visuallyHiddenText: "proof of identity"
           }
         ]
       }
