--- a/app/views/base/apply/confirmation.html
+++ b/app/views/base/apply/confirmation.html
@@ -16,12 +16,12 @@
    <h2 class="govuk-heading-m">What happens next</h2>
 
    <p class="govuk-body">
-     You need to upload evidence of your writing. You can do this in your account.
+     If you have not uploaded confirmation of your identity, you can do this in your account.
    </p>
 
    {{ govukButton({
      href: "/" + folder +  "/account/index",
-   text: "Save and continue"
+   text: "Continue to your account"
  }) }}
 
 {% endblock %}
