--- a/app/views/index.html
+++ b/app/views/index.html
@@ -77,6 +77,7 @@ All screens
     {title: "Q5", description: "GOV.UK header, phase banner, service navigation, upload link, back link, cookie banner, error message, links (same tab and new tab)", link: "apply/5" },
     {title: "Check your answers", description: "GOV.UK header, phase banner, service navigation,summary list, cookie banner, links (same tab and new tab)", link: "apply/check-your-answers" },
     {title: "Confirmation", description: "GOV.UK header, phase banner, service navigation, panel, button, cookie banner, links (same tab and new tab)", link: "apply/confirmation" },
+
     {title: "Cookies", description: " GOV.UK header, phase banner, service navigation,cookie page, success banner, links (same tab and new tab)", link: "apply/cookies" }
 
       ]%}
@@ -95,7 +96,9 @@ All screens
 
 
     {% set account = [
-    {title: "Account home", description: "GOV.UK header, phase banner, service navigation with links, notification banner, links (same tab and new tab)", link: "account/index" }
+    {title: "Account home", description: "GOV.UK header, phase banner, service navigation with links, notification banner, links (same tab and new tab)", link: "account/index" },
+    {title: "Tasks", description: "GOV.UK header, phase banner, service navigation with links, breadcrumb, notification banner (when activated), task list", link: "account/tasks/index" },
+    {title: "Uploads", description: "GOV.UK header, phase banner, service navigation with links, back link, upload link, back link, cookie banner, error message, links (same tab and new tab)", link: "account/tasks/upload" }
 
       ]%}
 
