--- a/app/views/base/account/index.html
+++ b/app/views/base/account/index.html
@@ -12,7 +12,7 @@
 
   <p class="govuk-notification-banner__heading">
     You have tasks to complete.
-    <a class="govuk-notification-banner__link" href="tasks">Go to incomplete tasks</a>.
+    <a class="govuk-notification-banner__link" href="tasks/index">Go to incomplete tasks</a>.
   </p>
 {% endset %}
 
