--- a/app/views/base/accordion.html
+++ b/app/views/base/accordion.html
@@ -92,7 +92,7 @@
             <li>
               <a href="#">
 
-                Author’s licence information
+                Study information
               </a>
             </li>
             <li>
