--- a/app/views/base/start.html
+++ b/app/views/base/start.html
@@ -39,10 +39,7 @@
         {{pageTitle}}
       </h1>
 
-      <p>  Use this service to get help for studying</p>
-
-
-<p>You can use this to:</p>
+      <p>  Use this service to get help for study. You can:</p>
 
   <ul class="govuk-list govuk-list--bullet">
 
@@ -113,7 +110,7 @@ You can <a class="govuk-link" href="account/index">check your account.</a> You w
             <li>
               <a class="govuk-link" href="#">
 
-                Study inforamtion
+                Study information
               </a>
             </li>
             <li>
