fixed bug where success came up late

--- a/app/views/base/account/tasks/index.html
+++ b/app/views/base/account/tasks/index.html
@@ -4,7 +4,7 @@
 {% block account %}
 
 
-{% if data['successBanner'] %}
+{% if data['fileUpload2'] and (data['upload-success'] == "true") %}
 
 {% set html %}
   <h3 class="govuk-notification-banner__heading">
