--- a/app/views/index.html
+++ b/app/views/index.html
@@ -97,7 +97,7 @@ All screens
 
     {% set account = [
     {title: "Account home", description: "GOV.UK header, phase banner, service navigation with links, notification banner, links (same tab and new tab)", link: "account/index" },
-    {title: "Tasks", description: "GOV.UK header, phase banner, service navigation with links, breadcrumb, notification banner (when activated), task list", link: "account/tasks/index" },
+    {title: "Tasks", description: "'Success:' in page title after success, GOV.UK header, phase banner, service navigation with links, breadcrumb, notification banner (when success upload from task), task list", link: "account/tasks/index" },
     {title: "Uploads", description: "GOV.UK header, phase banner, service navigation with links, back link, upload link, back link, cookie banner, error message, links (same tab and new tab)", link: "account/tasks/upload" }
 
       ]%}
@@ -116,7 +116,7 @@ All screens
 
 <p class="govuk-body">This was made using GOV.UK Frontend, the GOV.UK Design System macros where possible and the GOV.UK Prototype kit for interactive elements. This means that it should only have issues as in the <a class="govuk-link" href="https://design-system.service.gov.uk/accessibility-statement/">GOV.UK Design System accessibility statement</a> (which note two issues with Dragon speech recognition software and some components). </p>
 <p>
-  When testing using accessibility tester <a class="govuk-link" href="https://liptrot.org/pattern-checker/" >Adam Liptrot's Pattern Checker Chrome extension</a>, there are only 3 errors and thse are through known exceptions:</p>
+  When testing using accessibility tester <a class="govuk-link" href="https://liptrot.org/pattern-checker/" >Adam Liptrot's Pattern Checker Chrome extension</a>, there are only 3 errors and these are through known exceptions:</p>
 
   <ol class="govuk-list govuk-list--number">
     <li>Timeout warning not found - this has not been included for the purposes of a prototype</li>
