--- a/app/views/bad/start.html
+++ b/app/views/bad/start.html
@@ -7,7 +7,11 @@
 
 {% block header %}
   <!-- Blank header with no service name for the start page -->
-  {{ govukHeader() }}
+  {{ govukHeader({
+      homepageUrl: "/" + folder  + "/index",
+ classes: "bad"
+
+    }) }}
 {% endblock %}
 
 {% block beforeContent %}
