--- a/app/views/good/apply/_BASE.html
+++ b/app/views/good/apply/_BASE.html
@@ -118,6 +118,7 @@
 
 {% block header %}
 {{ govukHeader({
+    homepageUrl: "/" + folder  + "/index",
   classes: "govuk-header--full-width-border"
 }) }}
 
