--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,7 +14,7 @@
     </h1>
 
 
-<p class="govuk-body">Example service for building and testing an accessible service.</p>
+<p class="govuk-body">Two different ways of exploring an accessible service: from a good (accessible) boilerplate, or a deliberately bad version.</p>
 
 <div class="govuk-button-group">
 
