--- a/app/views/bad/account/_BASE.html
+++ b/app/views/bad/account/_BASE.html
@@ -4,13 +4,14 @@
 
 
 {% block pageTitle %}
-  {% if data['errors'] %}Error: {% endif %}{{pageTitle}} – {{ serviceName }} – GOV.UK
+  {% if data['errors'] %}Error: {% endif %}{{pageTitle}} – {{ serviceName }} (bad example) – GOV.UK
 {% endblock %}
 
 {% block header %}
 {{ govukHeader({
-  classes: "govuk-header--full-width-border"
-
+  homepageUrl: "/" + folder  + "/index",
+  attributes: { "style" : "border-bottom-color:#d4351c" },
+  classes: "govuk-header--full-width-border bad"
 }) }}
 
 
@@ -71,7 +72,7 @@
     }, {
       text: "Tasks",
       href:  "/" + folder + "/" + subfolder + "/tasks/index"
-    } 
+    }
   ]
 }) }}
 
