--- a/app/views/bad/start.html
+++ b/app/views/bad/start.html
@@ -110,20 +110,20 @@ You can <a class="govuk-link" href="account/index">check your account.</a> You w
           Subsection
         </h2>
         <nav role="navigation" aria-labelledby="subsection-title">
-          <ul class="govuk-list govuk-!-font-size-16">
+          <ul class="govuk-list bad govuk-!-font-size-16">
             <li>
-              <a class="govuk-link" href="#">
+              <a href="#">
 
                 Study information
               </a>
             </li>
             <li>
-              <a class="govuk-link" href="#">
+              <a  href="#">
                 Related link
               </a>
             </li>
             <li>
-              <a href="#" class="govuk-link govuk-!-font-weight-bold">
+              <a href="#" class="govuk-!-font-weight-bold">
                 More <span class="govuk-visually-hidden">in Subsection</span>
               </a>
             </li>
